add_executable(Reactor_test01 Reactor_test01.cc)
target_link_libraries(Reactor_test01  ham_net ham_base)

add_executable(TimerQueue_unittest TimerQueue_unittest.cc)
target_link_libraries(TimerQueue_unittest  ham_net ham_base)

add_executable(Acceptor_unittest Acceptor_unittest.cc)
target_link_libraries(Acceptor_unittest  ham_net ham_base)